--- a/src/components/experienceCard/ExperienceCard.css
+++ b/src/components/experienceCard/ExperienceCard.css
@@ -73,6 +73,8 @@
   text-align: justify;
   margin-right: 20px;
   font-family: "Google Sans Regular";
+  white-space: pre-line;
+  line-height: 1.1;
 }
 
 .experience-card-company > a {
@@ -106,6 +108,11 @@
   transition: all 0.3s ease-in-out 0s;
 }
 
+.experience-card-margin-top {
+  margin-top: 10px;
+  text-align: right;
+}
+
 @media (max-width: 768px) {
   .experience-card {
     margin-bottom: 10px;
@@ -115,9 +122,6 @@
 
   .experience-card-logo {
     width: 100px;
-  }
-
-  .experience-card-body-div {
   }
 
   .experience-card-heading-left {
@@ -146,7 +150,6 @@
   }
 
   .experience-card-location {
-    /* text-align: left; */
     text-align: center;
   }
 
@@ -158,5 +161,12 @@
     margin-left: 14px;
     margin-right: 14px;
     text-align: justify;
+    white-space: pre-line;
+    line-height: 1.1;
+  }
+
+  .experience-card-margin-top {
+    margin-top: 5px;
+    text-align: right;
   }
 }
